--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_issue_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_issue_detailpage.html
@@ -100,9 +100,9 @@
 	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 	
     <div id="container">
-        <div class="mypage_wrap">
+        <div class="mypage_wrap_community">
             <div class="works_showingoff_detail_page_wrap mb0">
-                <h2 class="mt50">이슈</h2>
+                <h2 class="mt50" style="font-size: 36px;font-weight: bold;letter-spacing: -1.5px;border-left: 8px solid #e9625c;padding-left: 24px;">이슈</h2>
                 
                 <div id="comtFirstBox">
                 
