메인 화면 배너 등록 순서 및 출력 순서로 조회해서 가져오도록 쿼리 수정

--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -855,7 +855,7 @@
 	function fn_setBanner (data){
 		
 		var html = "";
-		
+		console.log(data);
 		// 신규 등록된 배너가 1개 이상일 경우
 		if(data != null && data.length > 0){
 			
