자랑하기 상세페이지 작품정보호출 오류사항 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
@@ -541,7 +541,7 @@
     	// 작가 정보 html 생성
     	function setArtstInfoHtml() {
     		var artstInfo = list["artistInfo"];
-    		var myPageWrap = $(".mypage_wrap");
+    		var myPageWrap = $(".mypage_wrap_community");
     		
 			var html = '';
 			html += '<div id="artstInfo">';
@@ -615,7 +615,7 @@
 	    		comt[i].comtContent = inputText;
 	    	}
 
-    		var myPageWrap = $(".mypage_wrap");
+    		var myPageWrap = $(".mypage_wrap_community");
     		var titlehtml = '';
     		
     		titlehtml += '<div class="contents conbg">';
