--- a/src/main/resources/templates/thymeleaf/fo/community/community_home.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_home.html
@@ -414,7 +414,7 @@
     	
 		//홈 배너
 		function fn_setBanner(list) {
-			
+
     		console.log(list)
     		
     		$(".community_visual_wrap").empty();
@@ -431,11 +431,11 @@
 	        html += '	<ul>';
 	        html += '		<li>';
 	        html += '			<a href="'+list.bnnELndUrl+'">';
-	        html += '				<img src="'+list.bnnEmImgUrl+'" alt="">';
+	        html += '				<img src="'+list.bnnEpImgUrl+'" alt="">';
 	        html += '			</a>';
 	        html += '		</li>';
 	        html += '       <li>';
-	        html += '			<a href="https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet">';
+	        html += '			<a href="'+list.bnnELndUrl+'">';
 	        html += '				<img src="/resources/img/img_new/btn_event_more.png" alt="">';
 	        html += '			</a>';
 	        html += '		</li>';
