--- a/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_main.html
@@ -282,7 +282,7 @@ input[type=number] {
     		console.log(list)
     		
 			var html = "";
-    		html += '<img src="'+ list.bnnMpImgUrl +'" alt="">';
+    		html += '<a href="'+ list.bnnMLndUrl +'"><img src="'+ list.bnnMpImgUrl +'" alt="">';
 			return html;
 		}
     	
