--- a/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_main_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_main_mo.html
@@ -299,7 +299,7 @@
 		console.log(list)
 		
 		var html = "";
-		html += '<img src="'+ list.bnnMpImgUrl +'" alt="">';
+		html += '<a href="'+ list.bnnMLndUrl +'"><img src="'+ list.bnnMmImgUrl +'" alt="">';
 		return html;
 	}
 	
