--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
@@ -137,8 +137,8 @@
             </div>
             <div class="notice dp-flex">
                 <div class="tit">공 지</div>
-                <div class="contents mt0">
-                	<div>작품자랑 작성 가이드 라인 ver 1.0</div>
+                <div class="contents mt0" id="noti">
+                	<span>작품자랑 작성 가이드 라인 ver 1.0</span>
                 </div>
             </div>
             <div class="exhint_wrap" id="listBox">
@@ -220,6 +220,7 @@
    				setExhibitHtml(response.result, response.boardAuth);
    				setPagenation(response.totalCount);
    				fn_chkComponetUseYn(response.boardAuth);
+   				fn_notice(response.noti);
    			}),
    			error: (function(response){
    				console.log(response);
@@ -593,6 +594,14 @@
 		}
 	}
 
+	// 공지 조회
+	function fn_notice(data){
+		if(data != null){
+			console.log(data.noti);
+		
+			$("#noti span").text(data.noti);
+		}
+	}
     </script>
 </body>
 </html>
