--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_issue_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_issue_detailpage.html
@@ -391,6 +391,13 @@
 			}else if(data[0].cmtYn == "N"){
 				$(".cmt").css("display","none");
 			}
+			
+			// 등록 시간 표시 여부
+			if(data[0].cmMgRegDtYn == "Y"){
+				$(".day").css("display","block");
+			}else if(data[0].cmtYn == "N"){
+				$(".day").css("display","none");
+			}
 		}
 	}
     </script>
