메인 페이지 이미지 조절

--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -866,7 +866,7 @@
 				if(i < data.length){
 					html += '<div class="swiper-slide" id="banner" align="center" style="background-color:#ffffff;">';
 					html += '	<a href="' + data[i].bnnMLndUrl + '">';
-		    		html += '		<img src="' + data[i].bnnMmImgUrl + '" alt="">';
+		    		html += '		<img src="' + data[i].bnnMpImgUrl + '" alt="">';
 		    		html += '	</a>';
 					html += '</div>'	
 					
