매거진 인사이트, 아티스트필름, 아티스트 메인 베너 고정 교체 작업

--- a/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_artist.html
@@ -101,7 +101,7 @@
                 </ul>
             </div>            
             <div class="magazine9_visual_wrap">
-                <img src="/resources/img/img_new/magazine9_artist_visual00.jpg" alt="">
+                <img src="/resources/img/mgz/artist_pc.png" alt="">
             </div>
 			<div class="sea-won2">
 				<input type="text" id="searchKeyword" placeholder="작품이나 작가를 검색해 보세요" onkeydown="javascript: if (event.keyCode == 13) {dealSearch();}" style="outline: none;" autocomplete="off">
