--- a/src/main/resources/templates/thymeleaf/fo/mgz/media.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/media.html
@@ -114,7 +114,7 @@
 		                </ul>
 		            </div> 
 	            <div class="magazine9_visual_wrap">
-	                <img src="/resources/img/img_new/magazine9_visual.jpg" alt="">
+	                <img src="/resources/img/mgz/media_pc.png" alt="">
 	            </div>  
 					<!-- <div class="mgz-body max-1500"> -->
 					<div class="popular_insight_wrap">
