--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint.html
@@ -246,7 +246,7 @@
                     </div>
                     
                     <div class="mypage_exhint_contents_wrap">
-                        <div class="exhint_row">
+                        <!-- <div class="exhint_row">
                             <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents width75per">
                                 <ul>
@@ -277,8 +277,8 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
-                    </div>
+                        </div> -->
+                    </div> 
                     <div class="pagination">
                         <div class="paginate">                        
                             <strong>1</strong>
