--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
@@ -212,7 +212,7 @@
 										<tr>
 											<td colspan="2">
 												<div id="toolbar-container"></div>
-		                        				<div id="editor" style="border: 1px solid #efefef; background-color: #ffffff;"></div>
+		                        				<div id="editor" style="border: 1px solid #efefef;max-height:400px;overflow-y:auto; background-color: #ffffff;"></div>
 											</td>
 										</tr>
 										<tr>
