--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue.html
@@ -163,7 +163,7 @@
 							
                     <div class="mypage_exhint_contents_wrap">
                         <div class="exhint_row">
-                            <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
+                            <!-- <div class="exhint_list_img"><img src="/resources/img/img_new/sample_exhint01.jpg" alt=""><div class="ico_num">1+</div></div>
                             <div class="contents width75per">
                                 <ul>
                                     <li>
@@ -192,7 +192,7 @@
                                         </div>                                
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                          <div class="pagination">
