--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_myworks.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_myworks.html
@@ -114,17 +114,17 @@
                     <div class="mypage_tap_wrap">
                     <th:block th:if="${#strings.isEmpty(mbrSq)}">
                         <ul class="tap">
-                            <li id="btn_nal1"class="on bg_no">전체(<em id="myTotal">99</em>)</li>
-                            <li id="btn_nal2">소장품(<em id="myCollTotal">99</em>)</li>
-                            <li id="btn_nal3">창작품(<em id="myWorkTotal">99</em>)</li>
+                            <li id="btn_nal1"class="on bg_no">전체(<em id="myTotal"></em>)</li>
+                            <li id="btn_nal2">소장품(<em id="myCollTotal"></em>)</li>
+                            <li id="btn_nal3">창작품(<em id="myWorkTotal"></em>)</li>
                             <li id="btn_nal4" class="bg_no"><img src="/resources/img/img_new/ico_tap_setting.png" alt="">작품관리</li>
                         </ul>
                     </th:block>
                     <th:block th:unless="${#strings.isEmpty(mbrSq)}">
                         <ul class="tap">
-                            <li id="btn_nal1"class="on bg_no">전체(<em id="myTotal">99</em>)</li>
-                            <li id="btn_nal2">소장품(<em id="myCollTotal">99</em>)</li>
-                            <li id="btn_nal3" class="bg_no">창작품(<em id="myWorkTotal">99</em>)</li>
+                            <li id="btn_nal1"class="on bg_no">전체(<em id="myTotal"></em>)</li>
+                            <li id="btn_nal2">소장품(<em id="myCollTotal"></em>)</li>
+                            <li id="btn_nal3" class="bg_no">창작품(<em id="myWorkTotal"></em>)</li>
                         </ul>
                     </th:block>
                     </div>
