--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff.html
@@ -191,7 +191,7 @@
                     </div>
                     <!-- mobile html 끝 -->
                     <div class="mypage_showingoff_contents_wrap">
-                        <div class="mypage_showingoff_contents_row">
+                        <!-- <div class="mypage_showingoff_contents_row">
                             <ul>
                                 <li>
                                     <div class="showingoff_pic">
@@ -257,7 +257,7 @@
                                     </div>
                                 </li>                                
                             </ul>                    
-                        </div>
+                        </div> -->
 					</div>
 					    	<div class="btn_area">
 								<button type="button" id= "moreList">더보기</button>                
