--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
@@ -365,7 +365,7 @@
 											<tr>
 												<td colspan="2">
 													<div id="COLLToolbar-container"></div>
-			                        				<div id="COLLEditor" style="border: 1px solid #efefef; background-color: #ffffff;"></div>
+			                        				<div id="COLLEditor" style="border: 1px solid #efefef; background-color: #ffffff;max-height:300px;overflow-y:auto;"></div>
 												</td>
 											</tr>
 											<tr>
@@ -792,7 +792,7 @@
 											<tr>
 												<td colspan="2">
 													<div id="WORKToolbar-container"></div>
-			                        				<div id="WORKEditor" style="border: 1px solid #efefef; background-color: #ffffff;"></div>
+			                        				<div id="WORKEditor" style="border: 1px solid #efefef; background-color: #ffffff;max-height:300px;overflow-y:auto;"></div>
 												</td>
 											</tr>
 											<tr>
