--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -1215,7 +1215,7 @@ div{
     position: absolute;
     width: 100%;
     height: 530px;
-    background-color: rgb(0 0 0 / 60%);
+/*     background-color: rgb(0 0 0 / 60%); */
     top: 80px;
     left: 0;
     z-index: 1;
