--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_page2.html
@@ -170,7 +170,7 @@
                               <tr>
                                  <td colspan="2">
                                     <div id="toolbar-container"></div>
-                                          <div id="editor" style="border: 1px solid #efefef; background-color: #ffffff;"></div>
+                                          <div id="editor" style="border: 1px solid #efefef;max-height:500px;overflow-y:auto; background-color: #ffffff;"></div>
                                  </td>
                               </tr>
                               <tr>
