--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
@@ -109,8 +109,8 @@
                         <h2>나의 작품 <span id="myWorksTotal">0</span></h2>
                         <a href="/myPage/workList" class="btn_more">더보기</a>
                     </div>
-                    <ul id="myWorks">
-                        <li>
+                   <ul id="myWorks">
+                        <!-- <li>
                           <a href="#"><img src="/resources/img/img_new/sample_works01.jpg" alt=""></a>
                         </li>
                         <li>
@@ -118,7 +118,7 @@
                         </li>
                         <li class="pic_more">
                           <a href="#"><span>+ 99</span><img src="/resources/img/img_new/sample_works03.jpg" alt=""></a>
-                        </li>     
+                        </li>   -->   
                       </ul>
                   </div>
                   <div class="mypage_showingoff_wrap">
@@ -127,7 +127,7 @@
                         <a href="/myPage/show_off" class="btn_more">더보기</a>
                     </div>
                     <ul id="myBoast">
-                        <li>
+                        <!-- <li>
                           <a href="#"><img src="/resources/img/img_new/sample_works05.jpg" alt=""></a>
                         </li>
                         <li>
@@ -135,8 +135,8 @@
                         </li>
                         <li class="pic_more">
                           <a href="#"><span>+ 99</span><img src="/resources/img/img_new/sample_works07.jpg" alt=""></a>
-                        </li>                        
-                      </ul>
+                        </li> -->                        
+                      </ul> 
                   </div>
                   <div class="mypage_posts_warp">
                     <div class="intro_posts">
@@ -145,11 +145,11 @@
                             <a href="/myPage/exhint" class="btn_more">더보기</a>
                         </div>
                         <ol id="myExhbn">
-                            <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
+                 <!--            <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
                             <li><a href="#">희망을 주는 그림</a><em></em></li>
                             <li><a href="#">희망을 주는 그림</a><em>[7]</em></li>
-                            <li><a href="#">희망을 주는 그림</a><em></em></li>
-                        </ol>
+                            <li><a href="#">희망을 주는 그림</a><em></em></li> -->
+                        </ol> 
                     </div>                    
                   </div>
                   <div id="myIssue_warp" class="mypage_posts_warp mt10">
@@ -158,12 +158,12 @@
                             <h2><img src="/resources/img/img_new/ico_issue.png" alt=""><span>이슈</span><em id="myIssueTotal">+99</em></h2>
                             <a href="/myPage/issue" class="btn_more">더보기</a>
                         </div>
-                        <ol id="myIssue">
-                            <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
+                       <ol id="myIssue">
+                           <!--  <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
                             <li><a href="#">도자기 보관 방법</a><em></em></li>
                             <li><a href="#">도자기 보관 방법</a><em>[7]</em></li>
-                            <li><a href="#">도자기 보관 방법</a><em></em></li>
-                        </ol>
+                            <li><a href="#">도자기 보관 방법</a><em></em></li> -->
+                        </ol> 
                     </div>                    
                   </div>
                   <div id="myScrap_warp" class="mypage_scrap_wrap">
@@ -172,7 +172,7 @@
                         <a href="/myPage/scrap" class="btn_more">더보기</a>
                     </div>
                     <ul id="myScrap">
-                        <li>
+                       <!--  <li>
                           <a href="#"><img src="/resources/img/img_new/sample_master01.jpg" alt=""></a>
                         </li>
                         <li>
@@ -180,8 +180,8 @@
                         </li>
                         <li class="pic_more">
                           <a href="#"><span>+ 99</span><img src="/resources/img/img_new/sample_master03.jpg" alt=""></a>
-                        </li>                        
-                  	</ul>
+                        </li> -->                        
+                  	</ul> 
                   </div>
                   <div id="myFollowing_warp" class="mypage_following_wrap">
                     <div class="tit_wrap">
@@ -189,7 +189,7 @@
                         <a href="/myPage/following" class="btn_more">더보기</a>
                     </div>
                     <ul id="myFollowing">
-                        <li>
+                       <!--  <li>
                           <a href="#"><img src="/resources/img/img_new/sample_master01.jpg" alt=""></a>
                         </li>
                         <li>
@@ -197,8 +197,8 @@
                         </li>
                         <li class="pic_more">
                           <a href="#"><span>+ 0</span><img src="/resources/img/img_new/sample_master03.jpg" alt=""></a>
-                        </li>                        
-                      </ul>
+                        </li>   -->                      
+                      </ul> 
                   </div>
                   <div id="myNoti_warp" class="mypage_posts_warp">
                     <div class="noticebox_posts">
@@ -206,11 +206,11 @@
                             <h2><img src="/resources/img/img_new/ico_notice.png" alt=""><span>알림함</span><em id="myNotiTotal">0</em></h2>
                             <a href="/myPage/notis" class="btn_more">더보기</a>
                         </div>
-                        <ol id="myNoti">
-                            <li><a href="#">[판매제안] 작품이 너무 맘에 듭니다. 판매로 올려주세요 ♥</a></li>
+                       <ol id="myNoti">
+                           <!--  <li><a href="#">[판매제안] 작품이 너무 맘에 듭니다. 판매로 올려주세요 ♥</a></li>
                             <li><a href="#">[가격제안] 10% 낮춰서 1,000,000원에 구매 희망합니다!</a></li>
-                            <li><a href="#">[상세사진요청]후면 사진 요청 드려요.</a></li>
-                        </ol>
+                            <li><a href="#">[상세사진요청]후면 사진 요청 드려요.</a></li> -->
+                        </ol> 
                     </div>                    
                   </div>
               </div>
